istio/test-external-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  namespace: circuit-breaker
  name: myservice
spec:
  hosts:
    - reqres.in
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
